--- a/tassekolah3.html
+++ b/tassekolah3.html
@@ -10,7 +10,7 @@
     <div id = "kepala" style="background-color: rgb(59 168 241); justify-content: flex-start;">
         <div class="kepala">
             <div class="logo"><img src="Logo.jpg"></div>
-            <a href="index.html" style="text-decoration: none;">
+            <a href="Portofolio.html" style="text-decoration: none;">
                 <div class="nama"><h2>Blue Store</h2></div>
             </a>
             </div>
@@ -23,7 +23,7 @@
         <div class="beli" style="padding-bottom: 80px;">
             <div style="margin-bottom: -70px;margin-top: -10px;">
                 <h2>Tas Adidas</h2>
-                <div><img src="tassekolah1.jpeg"></div>
+                <div><img src="tassekolah3.jpeg"></div>
             </div>
             <div class="beli1">
                 <div><p>Harga</p></div>
