--- a/tas.html
+++ b/tas.html
@@ -10,7 +10,7 @@
     <div id = "kepala" style="background-color: rgb(59 168 241); justify-content: flex-start;">
         <div class="kepala">
             <div class="logo"><img src="Logo.jpg"></div>
-            <a href="index.html" style="text-decoration: none;">
+            <a href="Portofolio.html" style="text-decoration: none;">
                 <div class="nama"><h2>Blue Store</h2></div>
             </a>
             </div>
@@ -27,34 +27,34 @@
                 <div class="kategoritas2">
                     <a href="tas1.html" class="kategoritas2" style="text-decoration: none;color: black;">
                         <div><img src="tas1.jpeg"></div>
-                        <div><h3>Tas ZARA</h3></div>
-                        <div><p>Rp. 500.000</p></div>
+                        <div><h3>Tas Gucci</h3></div>
+                        <div><p>Rp. 40.000.000</p></div>
                         </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tas2.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                        <div><img src="tas1.jpeg"></div>
-                        <div><h3>Tas Fossil</h3></div>
-                        <div><p>Rp. 1.000.000</p></div>
+                        <div><img src="tas2.jpeg"></div>
+                        <div><h3>Tas ZARA</h3></div>
+                        <div><p>Rp. 500.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tas3.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tas1.jpeg"></div>
-                    <div><h3>Tas Gucci</h3></div>
-                    <div><p>Rp. 40.000.000</p></div>
+                    <div><img src="tas3.jpeg"></div>
+                    <div><h3>Tas Fossil</h3></div>
+                    <div><p>Rp. 1.000.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tas4.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tas1.jpeg"></div>
+                    <div><img src="tas4.jpeg"></div>
                     <div><h3>Tas LV</h3></div>
                     <div><p>Rp. 15.000.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tas5.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tas1.jpeg"></div>
+                    <div><img src="tas5.jpeg"></div>
                     <div><h3>Tas Dior</h3></div>
                     <div><p>Rp. 25.000.000</p></div>
                     </a>
@@ -77,28 +77,28 @@
                 </div>
                 <div class="kategoritas2">
                     <a href="taspria2.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="taspria1.jpeg"></div>
+                    <div><img src="taspria2.jpeg"></div>
                     <div><h3>Tas Nike</h3></div>
                     <div><p>Rp. 500.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="taspria3.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="taspria1.jpeg"></div>
+                    <div><img src="taspria3.jpeg"></div>
                     <div><h3>Tas Eiger</h3></div>
                     <div><p>Rp. 900.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="taspria4.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="taspria1.jpeg"></div>
+                    <div><img src="taspria4.jpeg"></div>
                     <div><h3>Tas Giorgio Armani</h3></div>
                     <div><p>Rp. 20.000.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="taspria5.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="taspria1.jpeg"></div>
+                    <div><img src="taspria5.jpeg"></div>
                     <div><h3>Tas Fossil</h3></div>
                     <div><p>Rp. 1.000.000</p></div>
                     </a>
@@ -121,28 +121,28 @@
                 </div>
                 <div class="kategoritas2">
                     <a href="tassekolah2.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tassekolah1.jpeg"></div>
+                    <div><img src="tassekolah2.jpeg"></div>
                     <div><h3>Tas JanSport</h3></div>
                     <div><p>Rp. 600.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tassekolah3.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tassekolah1.jpeg"></div>
+                    <div><img src="tassekolah3.jpeg"></div>
                     <div><h3>Tas Adidas</h3></div>
                     <div><p>Rp. 500.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tassekolah4.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tassekolah1.jpeg"></div>
+                    <div><img src="tassekolah4.jpeg"></div>
                     <div><h3>Tas Kipling</h3></div>
                     <div><p>Rp. 2.000.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="tassekolah5.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="tassekolah1.jpeg"></div>
+                    <div><img src="tassekolah5.jpeg"></div>
                     <div><h3>Tas Polo</h3></div>
                     <div><p>Rp. 1.000.000</p></div>
                     </a>
