--- a/baju.html
+++ b/baju.html
@@ -10,7 +10,7 @@
     <div id = "kepala" style="background-color: rgb(59 168 241); justify-content: flex-start;">
         <div class="kepala">
             <div class="logo"><img src="Logo.jpg"></div>
-            <a href="index.html" style="text-decoration: none;">
+            <a href="Portofolio.html" style="text-decoration: none;">
                 <div class="nama"><h2>Blue Store</h2></div>
             </a>
             </div>
@@ -32,29 +32,29 @@
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuwanita1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuwanita1.jpeg"></div>
+                    <a href="bajuwanita2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuwanita2.jpeg"></div>
                     <div><h3>Kemeja</h3></div>
                     <div><p>Rp. 200.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuwanita1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuwanita1.jpeg"></div>
+                    <a href="bajuwanita3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuwanita3.jpeg"></div>
                     <div><h3>Jaket</h3></div>
                     <div><p>Rp. 500.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuwanita1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuwanita1.jpeg"></div>
+                    <a href="bajuwanita4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuwanita4.jpeg"></div>
                     <div><h3>Dress</h3></div>
                     <div><p>Rp. 1.000.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuwanita1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuwanita1.jpeg"></div>
+                    <a href="bajuwanita5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuwanita5.jpeg"></div>
                     <div><h3>Blazer</h3></div>
                     <div><p>Rp. 900.000</p></div>
                     </a>
@@ -77,28 +77,28 @@
                 </div>
                 <div class="kategoritas2">
                     <a href="baju2.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="baju1.jpeg"></div>
+                    <div><img src="baju2.jpeg"></div>
                     <div><h3>Kemeja</h3></div>
                     <div><p>Rp. 200.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="baju3.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="baju1.jpeg"></div>
+                    <div><img src="baju3.jpeg"></div>
                     <div><h3>Jaket</h3></div>
                     <div><p>Rp. 500.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="baju4.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="baju1.jpeg"></div>
+                    <div><img src="baju4.jpeg"></div>
                     <div><h3>Jas</h3></div>
                     <div><p>Rp. 1.000.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
                     <a href="baju5.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="baju1.jpeg"></div>
+                    <div><img src="baju5.jpeg"></div>
                     <div><h3>Kemeja</h3></div>
                     <div><p>Rp. 400.000</p></div>
                     </a>
@@ -120,29 +120,29 @@
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuanak1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuanak1.jpeg"></div>
+                    <a href="bajuanak2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuanak2.jpeg"></div>
                     <div><h3>Kemeja</h3></div>
                     <div><p>Rp. 200.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuanak1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuanak1.jpeg"></div>
+                    <a href="bajuanak3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuanak3.jpeg"></div>
                     <div><h3>Jaket</h3></div>
                     <div><p>Rp. 500.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuanak1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuanak1.jpeg"></div>
+                    <a href="bajuanak4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuanak4.jpeg"></div>
                     <div><h3>Kaos Barbie</h3></div>
                     <div><p>Rp. 200.000</p></div>
                     </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="bajuanak1.html" class="kategoritas2" style="text-decoration: none;color: black;">
-                    <div><img src="bajuanak1.jpeg"></div>
+                    <a href="bajuanak5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                    <div><img src="bajuanak5.jpeg"></div>
                     <div><h3>Kaos Buzz</h3></div>
                     <div><p>Rp. 150.000</p></div>
                     </a>
