--- a/bajuanak1.html
+++ b/bajuanak1.html
@@ -22,12 +22,12 @@
     align-items: center;">
         <div class="beli">
             <div style="margin-bottom: -70px;margin-top: -10px;">
-                <h2>Jaket</h2>
-                <div><img src="baju3.jpeg"></div>
+                <h2>Kaos Mickey</h2>
+                <div><img src="bajuanak1.jpeg"></div>
             </div>
             <div class="beli1">
                 <div><p>Harga</p></div>
-                <div><p>Rp. 500.000</p></div>
+                <div><p>Rp. 50.000</p></div>
                 <div style="display: flex;flex-direction: row; gap: 5px;">
                     <button type="button" class="login">Beli</button>
                     <a href="baju.html" style="text-decoration: none;"><button type="button" class="login">Kembali</button></a>
