--- a/bajuwanita3.html
+++ b/bajuwanita3.html
@@ -23,7 +23,7 @@
         <div class="beli">
             <div style="margin-bottom: -70px;margin-top: -10px;">
                 <h2>Jaket</h2>
-                <div><img src="baju3.jpeg"></div>
+                <div><img src="bajuwanita3.jpeg"></div>
             </div>
             <div class="beli1">
                 <div><p>Harga</p></div>
