--- a/taspria3.html
+++ b/taspria3.html
@@ -10,7 +10,7 @@
     <div id = "kepala" style="background-color: rgb(59 168 241); justify-content: flex-start;">
         <div class="kepala">
             <div class="logo"><img src="Logo.jpg"></div>
-            <a href="Portofolio.html" style="text-decoration: none;">
+            <a href="index.html" style="text-decoration: none;">
                 <div class="nama"><h2>Blue Store</h2></div>
             </a>
             </div>
