--- a/tas3.html
+++ b/tas3.html
@@ -22,12 +22,12 @@
     align-items: center;">
         <div class="beli">
             <div style="margin-bottom: -70px;margin-top: -10px;">
-                <h2>Tas Gucci</h2>
+                <h2>Tas Fossil</h2>
                 <div><img src="tas3.jpeg"></div>
             </div>
             <div class="beli1">
                 <div><p>Harga</p></div>
-                <div><p>Rp. 40.000.000</p></div>
+                <div><p>Rp. 1.000.000</p></div>
                 <div style="display: flex;flex-direction: row; gap: 5px;">
                     <button type="button" class="login">Beli</button>
                     <a href="tas.html" style="text-decoration: none;"><button type="button" class="login">Kembali</button></a>
