--- a/tas2.html
+++ b/tas2.html
@@ -20,7 +20,7 @@
     </div>
     <section class= "kategori" style="display: flex; min-height: 0vh; margin-top: 10%; flex-direction: column; justify-content: center;
     align-items: center;">
-        <div class="beli">
+        <div class="beli" style="padding-bottom: 80px;">
             <div style="margin-bottom: -70px;margin-top: -10px;">
                 <h2>Tas ZARA</h2>
                 <div><img src="tas2.jpeg"></div>
