--- a/celana.html
+++ b/celana.html
@@ -24,35 +24,40 @@
                 <h2>Celana Perempuan</h2>
             </div>
             <div class="kategoritas1">
-                <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanawanita1.jpeg"></div>
-                    <div><h3>Panjang</h3></div>
-                    <div><p>Rp. 200.000</p></div>
+                <div class="kategoritas2" >
+                    <a href="celanawanita1.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanawanita1.jpeg"></div>
+                        <div><h3>Panjang</h3></div>
+                        <div><p>Rp. 200.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanawanita1.jpeg"></div>
-                    <div><h3>Pendek</h3></div>
-                    <div><p>Rp. 150.000</p></div>
+                    <a href="celanawanita2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanawanita2.jpeg"></div>
+                        <div><h3>Pendek</h3></div>
+                        <div><p>Rp. 150.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanawanita1.jpeg"></div>
-                    <div><h3>Rok</h3></div>
-                    <div><p>Rp. 100.000</p></div>
+                    <a href="celanawanita3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanawanita3.jpeg"></div>
+                        <div><h3>Rok</h3></div>
+                        <div><p>Rp. 100.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanawanita1.jpeg"></div>
-                    <div><h3>Chinos</h3></div>
-                    <div><p>Rp. 250.000</p></div>
+                    <a href="celanawanita4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanawanita4.jpeg"></div>
+                        <div><h3>Chinos</h3></div>
+                        <div><p>Rp. 250.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanawanita1.jpeg"></div>
-                    <div><h3>Jeans</h3></div>
-                    <div><p>Rp. 250.000</p></div>
+                    <a href="celanawanita5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanawanita5.jpeg"></div>
+                        <div><h3>Jeans</h3></div>
+                        <div><p>Rp. 250.000</p></div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -65,34 +70,39 @@
             <div class="etalase2">
                 <div class="kategoritas1">
                     <div class="kategoritas2">
-                        <a href="tas.html"></a>
-                        <div><img src="celana1.jpeg"></div>
-                        <div><h3>Panjang</h3></div>
-                        <div><p>Rp. 200.000</p></div>
+                        <a href="celana1.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                            <div><img src="celana1.jpeg"></div>
+                            <div><h3>Panjang</h3></div>
+                            <div><p>Rp. 200.000</p></div>
+                        </a>
                     </div>
                     <div class="kategoritas2">
-                        <a href="tas.html"></a>
-                        <div><img src="celana1.jpeg"></div>
-                        <div><h3>Pendek</h3></div>
-                        <div><p>Rp. 150.000</p></div>
+                        <a href="celana2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                            <div><img src="celana2.jpeg"></div>
+                            <div><h3>Pendek</h3></div>
+                            <div><p>Rp. 150.000</p></div>
+                        </a>
                     </div>
                     <div class="kategoritas2">
-                        <a href="tas.html"></a>
-                        <div><img src="celana1.jpeg"></div>
-                        <div><h3>Bahan</h3></div>
-                        <div><p>Rp. 400.000</p></div>
+                        <a href="celana3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                            <div><img src="celana3.jpeg"></div>
+                            <div><h3>Bahan</h3></div>
+                            <div><p>Rp. 400.000</p></div>
+                        </a>
                     </div>
                     <div class="kategoritas2">
-                        <a href="tas.html"></a>
-                        <div><img src="celana1.jpeg"></div>
-                        <div><h3>Chinos</h3></div>
-                        <div><p>Rp. 250.000</p></div>
+                        <a href="celana4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                            <div><img src="celana4.jpeg"></div>
+                            <div><h3>Chinos</h3></div>
+                            <div><p>Rp. 250.000</p></div>
+                        </a>
                     </div>
                     <div class="kategoritas2">
-                        <a href="tas.html"></a>
-                        <div><img src="celana1.jpeg"></div>
-                        <div><h3>Jeans</h3></div>
-                        <div><p>Rp. 250.000</p></div>
+                        <a href="celana5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                            <div><img src="celana5.jpeg"></div>
+                            <div><h3>Jeans</h3></div>
+                            <div><p>Rp. 250.000</p></div>
+                        </a>
                     </div>
             </div>
     </div>
@@ -104,34 +114,39 @@
             </div>
             <div class="etalase2">
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanaanak1.jpeg"></div>
-                    <div><h3>Panjang</h3></div>
-                    <div><p>Rp. 200.000</p></div>
+                    <a href="celanaanak1.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanaanak1.jpeg"></div>
+                        <div><h3>Panjang</h3></div>
+                        <div><p>Rp. 200.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanaanak1.jpeg"></div>
-                    <div><h3>Pendek</h3></div>
-                    <div><p>Rp. 150.000</p></div>
+                    <a href="celanaanak2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanaanak2.jpeg"></div>
+                        <div><h3>Pendek</h3></div>
+                        <div><p>Rp. 150.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanaanak1.jpeg"></div>
-                    <div><h3>Bahan</h3></div>
-                    <div><p>Rp. 400.000</p></div>
+                    <a href="celanaanak3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanaanak3.jpeg"></div>
+                        <div><h3>Bahan</h3></div>
+                        <div><p>Rp. 400.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanaanak1.jpeg"></div>
-                    <div><h3>Chinos</h3></div>
-                    <div><p>Rp. 250.000</p></div>
+                    <a href="celanaanak4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanaanak4.jpeg"></div>
+                        <div><h3>Chinos</h3></div>
+                        <div><p>Rp. 250.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="celanaanak1.jpeg"></div>
-                    <div><h3>Jeans</h3></div>
-                    <div><p>Rp. 250.000</p></div>
+                    <a href="celanaanak5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="celanaanak5.jpeg"></div>
+                        <div><h3>Jeans</h3></div>
+                        <div><p>Rp. 250.000</p></div>
+                    </a>
                 </div>
             </div>
         </div>
