--- a/sepatu.html
+++ b/sepatu.html
@@ -25,34 +25,39 @@
             </div>
             <div class="kategoritas1">
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuwanita1.jpeg"></div>
-                    <div><h3>Sneakypair</h3></div>
-                    <div><p>Rp. 400.000</p></div>
+                    <a href="sepatuwanita1.html"  class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuwanita1.jpeg"></div>
+                        <div><h3>Sneakypair</h3></div>
+                        <div><p>Rp. 400.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuwanita1.jpeg"></div>
-                    <div><h3>MADER</h3></div>
-                    <div><p>Rp. 500.000</p></div>
+                    <a href="sepatuwanita2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuwanita2.jpeg"></div>
+                        <div><h3>MADER</h3></div>
+                        <div><p>Rp. 500.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuwanita1.jpeg"></div>
-                    <div><h3>Skechers</h3></div>
-                    <div><p>Rp. 1.000.000</p></div>
+                    <a href="sepatuwanita3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuwanita3.jpeg"></div>
+                        <div><h3>Skechers</h3></div>
+                        <div><p>Rp. 1.000.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuwanita1.jpeg"></div>
-                    <div><h3>Hush Puppies</h3></div>
-                    <div><p>Rp. 2.000.000</p></div>
+                    <a href="sepatuwanita4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuwanita4.jpeg"></div>
+                        <div><h3>Hush Puppies</h3></div>
+                        <div><p>Rp. 2.000.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuwanita1.jpeg"></div>
-                    <div><h3>Golfer</h3></div>
-                    <div><p>Rp. 1.500.000</p></div>
+                    <a href="sepatuwanita5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuwanita5.jpeg"></div>
+                        <div><h3>Golfer</h3></div>
+                        <div><p>Rp. 1.500.000</p></div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -64,34 +69,40 @@
             </div>
             <div class="etalase2">
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatu1.jpeg"></div>
-                    <div><h3>Nike</h3></div>
-                    <div><p>Rp. 500.000</p></div>
+                    <a href="sepatu1.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatu1.jpeg"></div>
+                        <div><h3>Nike</h3></div>
+                        <div><p>Rp. 500.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatu1.jpeg"></div>
-                    <div><h3>Skechers</h3></div>
-                    <div><p>Rp. 1.000.000</p></div>
+                    <a href="sepatu2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatu2.jpeg"></div>
+                        <div><h3>Skechers</h3></div>
+                        <div><p>Rp. 1.000.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatu1.jpeg"></div>
-                    <div><h3>Adidas</h3></div>
-                    <div><p>Rp. 2.000.000</p></div>
+                    <a href="sepatu3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatu3.jpeg"></div>
+                        <div><h3>Adidas</h3></div>
+                        <div><p>Rp. 2.000.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatu1.jpeg"></div>
-                    <div><h3>Giant Flames</h3></div>
-                    <div><p>Rp. 1.500.000</p></div>
+                    <a href="sepatu4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatu4.jpeg"></div>
+                        <div><h3>Giant Flames</h3></div>
+                        <div><p>Rp. 1.500.000</p></div>
+                
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatu1.jpeg"></div>
-                    <div><h3>Dr. Kevin</h3></div>
-                    <div><p>Rp. 1.000.000</p></div>
+                    <a href="sepatu5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatu5.jpeg"></div>
+                        <div><h3>Dr. Kevin</h3></div>
+                        <div><p>Rp. 1.000.000</p></div>
+                    </a>
                 </div>
             </div>
     </div>
@@ -103,34 +114,39 @@
             </div>
             <div class="etalase2">
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuanak1.jpeg"></div>
-                    <div><h3>Nike</h3></div>
-                    <div><p>Rp. 500.000</p></div>
+                    <a href="sepatuanak1.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuanak1.jpeg"></div>
+                        <div><h3>Nike</h3></div>
+                        <div><p>Rp. 500.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuanak1.jpeg"></div>
-                    <div><h3>Skechers</h3></div>
-                    <div><p>Rp. 1.000.000</p></div>
+                    <a href="sepatuanak2.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuanak2.jpeg"></div>
+                        <div><h3>Skechers</h3></div>
+                        <div><p>Rp. 1.000.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuanak1.jpeg"></div>
-                    <div><h3>Adidas</h3></div>
-                    <div><p>Rp. 800.000</p></div>
+                    <a href="sepatuanak3.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuanak3.jpeg"></div>
+                        <div><h3>Adidas</h3></div>
+                        <div><p>Rp. 800.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuanak1.jpeg"></div>
-                    <div><h3>Rebook</h3></div>
-                    <div><p>Rp. 900.000</p></div>
+                    <a href="sepatuanak4.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuanak4.jpeg"></div>
+                        <div><h3>Rebook</h3></div>
+                        <div><p>Rp. 900.000</p></div>
+                    </a>
                 </div>
                 <div class="kategoritas2">
-                    <a href="tas.html"></a>
-                    <div><img src="sepatuanak1.jpeg"></div>
-                    <div><h3>Converse</h3></div>
-                    <div><p>Rp. 1.000.000</p></div>
+                    <a href="sepatuanak5.html" class="kategoritas2" style="text-decoration: none;color: black;">
+                        <div><img src="sepatuanak5.jpeg"></div>
+                        <div><h3>Converse</h3></div>
+                        <div><p>Rp. 1.000.000</p></div>
+                    </a>
                 </div>
             </div>
         </div>
